[Feat] 제출 버튼 기능 추가 #24

--- a/Teamply/Teamply/Screen/Home/schedule/registSchedule/registSchedule.storyboard
+++ b/Teamply/Teamply/Screen/Home/schedule/registSchedule/registSchedule.storyboard
@@ -38,8 +38,12 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J5W-Ta-VIK">
                                 <rect key="frame" x="292" y="78" width="75" height="35"/>
+                                <color key="tintColor" name="basic2"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="submitButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="hyK-rR-CYV"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKP-yf-Ziv">
                                 <rect key="frame" x="24" y="165" width="345" height="21"/>
